Tests/Error/GoalFirst/.build/alwaysfails.pr
{
  "name": "AlwaysFails",
  "description": "AlwaysFails: increments %goalFirstAttempts% by 1 (via list.add) and then throws an error.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "add 1 to %goalFirstAttempts%, write to %goalFirstAttempts%",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "list",
          "action": "add",
          "parameters": [
            {
              "name": "ListName",
              "value": "%goalFirstAttempts%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": 1,
              "type": "long"
            },
            {
              "name": "AtIndex",
              "value": -1,
              "type": "int"
            }
          ],
          "defaults": null
        },
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%goalFirstAttempts%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": "%__data__%",
              "type": "object"
            }
          ],
          "defaults": null
        }
      ],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    },
    {
      "index": 1,
      "text": "throw error \u0022always fails\u0022",
      "lineNumber": 3,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "always fails",
              "type": "string"
            },
            {
              "name": "StatusCode",
              "value": 500,
              "type": "int"
            }
          ],
          "defaults": null
        }
      ],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Tests/Error/GoalFirst/AlwaysFails.goal",
  "prPath": "/Tests/Error/GoalFirst/.build/alwaysfails.pr",
  "hash": "20452d6d06df8961ba441d4dc18fc37c2e6dd04b2658568f70fb8b95f341268d",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}